--- a/admin/src/admin.html
+++ b/admin/src/admin.html
@@ -10,7 +10,7 @@
     <!-- We manually handle copying favicon as part of build -->
     <!-- webpackIgnore: true -->
     <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-    <title>Admin | App by Company</title>
+    <title>Admin | 4D Research Lab </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="preconnect"
